src/plugins/screencast/screencastsource.h
@@ -7,6 +7,8 @@
 #pragma once
 
 #include <QObject>
+#include <spa/buffer/buffer.h>
+#include <spa/param/video/raw.h>
 
 namespace KWin
 {
@@ -24,7 +26,7 @@ public:
     virtual QSize textureSize() const = 0;
 
     virtual void render(GLFramebuffer *target) = 0;
-    virtual void render(QImage *image) = 0;
+    virtual void render(spa_data *spa, spa_video_format format) = 0;
     virtual std::chrono::nanoseconds clock() const = 0;
 
 Q_SIGNALS:
