src/plugins/screencast/screencastutils.h
@@ -8,6 +8,8 @@
 
 #include "kwinglplatform.h"
 #include "kwingltexture.h"
+#include <spa/buffer/buffer.h>
+#include <spa/param/video/raw.h>
 
 namespace KWin
 {
@@ -25,28 +27,29 @@ static void mirrorVertically(uchar *data, int height, int stride)
     }
 }
 
-static GLenum closestGLType(const QImage &image)
+static GLenum closestGLType(spa_video_format format)
 {
-    switch (image.format()) {
-    case QImage::Format_RGB888:
+    switch (format) {
+    case SPA_VIDEO_FORMAT_RGB:
         return GL_RGB;
-    case QImage::Format_BGR888:
+    case SPA_VIDEO_FORMAT_BGR:
         return GL_BGR;
-    case QImage::Format_RGB32:
-    case QImage::Format_RGBX8888:
-    case QImage::Format_RGBA8888:
-    case QImage::Format_RGBA8888_Premultiplied:
+    case SPA_VIDEO_FORMAT_RGBx:
+    case SPA_VIDEO_FORMAT_RGBA:
         return GL_RGBA;
+    case SPA_VIDEO_FORMAT_BGRA:
+    case SPA_VIDEO_FORMAT_BGRx:
+        return GL_BGRA;
     default:
-        qDebug() << "unknown format" << image.format();
+        qDebug() << "unknown format" << format;
         return GL_RGBA;
     }
 }
 
-static void grabTexture(GLTexture *texture, QImage *image)
+static void grabTexture(GLTexture *texture, spa_data *spa, spa_video_format format)
 {
     const bool invert = !texture->isYInverted();
-    Q_ASSERT(texture->size() == image->size());
+    const QSize size = texture->size();
     bool isGLES = GLPlatform::instance()->isGLES();
     bool invertNeeded = isGLES ^ invert;
     const bool invertNeededAndSupported = invertNeeded && GLPlatform::instance()->supports(PackInvert);
@@ -58,11 +61,11 @@ static void grabTexture(GLTexture *texture, QImage *image)
 
     texture->bind();
     if (GLPlatform::instance()->isGLES()) {
-        glReadPixels(0, 0, image->width(), image->height(), closestGLType(*image), GL_UNSIGNED_BYTE, (GLvoid *)image->bits());
+        glReadPixels(0, 0, size.width(), size.height(), closestGLType(format), GL_UNSIGNED_BYTE, spa->data);
     } else if (GLPlatform::instance()->glVersion() >= kVersionNumber(4, 5)) {
-        glGetTextureImage(texture->texture(), 0, closestGLType(*image), GL_UNSIGNED_BYTE, image->sizeInBytes(), image->bits());
+        glGetTextureImage(texture->texture(), 0, closestGLType(format), GL_UNSIGNED_BYTE, spa->chunk->size, spa->data);
     } else {
-        glGetTexImage(texture->target(), 0, closestGLType(*image), GL_UNSIGNED_BYTE, image->bits());
+        glGetTexImage(texture->target(), 0, closestGLType(format), GL_UNSIGNED_BYTE, spa->data);
     }
 
     if (invertNeededAndSupported) {
@@ -70,7 +73,7 @@ static void grabTexture(GLTexture *texture, QImage *image)
             glPixelStorei(GL_PACK_INVERT_MESA, prev);
         }
     } else if (invertNeeded) {
-        mirrorVertically(image->bits(), image->height(), image->bytesPerLine());
+        mirrorVertically(static_cast<uchar *>(spa->data), size.height(), spa->chunk->stride);
     }
 }
 
